python class comps

--- a/GameProjectMini.ipynb
+++ b/GameProjectMini.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "f33e5b97",
    "metadata": {},
    "outputs": [
@@ -10,28 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter number of games you want to play\tp\n",
+      "Enter number of games you want to play\too\n",
       "Enter the integer input\n",
-      "Game 1\n",
-      "Select any 1 from the list[rock,scissor,paper]paper\n",
-      "User selected\tpaper\n",
-      "System selected\tscissor\n",
-      "System Won\n",
-      "Game 2\n",
-      "Select any 1 from the list[rock,scissor,paper]paper\n",
-      "User selected\tpaper\n",
-      "System selected\trock\n",
-      "User Won\n",
-      "User Won\n",
       "Enter the valid input\n",
-      "Totoal games: 2\n",
-      "System Points 1\n",
-      "User Points 1\n",
-      "Tied Points 0\n",
-      ">>>>>>>Game Tied<<<<<<<\n",
-      "Do you want to play again Y/N\n",
-      "n\n",
-      "Game ended\n"
+      "Enter number of games you want to play\tuu\n",
+      "Enter the integer input\n",
+      "Enter the valid input\n"
      ]
     }
    ],
