--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -2,33 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "6da509fa",
+   "execution_count": null,
+   "id": "2efa9f5d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'null' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2796/3711730633.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mListModule\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSetModule\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mDicti\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;31m#import Tuple\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\">>>>>>Welcome to data structure claculator<<<<<<\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Dicti.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m   {\n\u001b[0;32m      4\u001b[0m    \u001b[1;34m\"cell_type\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m\"code\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m    \u001b[1;34m\"execution_count\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mnull\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m    \u001b[1;34m\"id\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m\"75a6a0ae\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m    \u001b[1;34m\"metadata\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'null' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ListModule\n",
     "import SetModule\n",
-    "import Dicti\n",
+    "#import Dictionary\n",
     "#import Tuple\n",
     "print(\">>>>>>Welcome to data structure claculator<<<<<<\")\n",
     "while True:\n",
     "    try:\n",
     "        print(\"Select the data structure\\n 1.List\\t 2.Set\\t 3.Dictionary\\t 4. Tuple\\n\")\n",
-    "        structType=int(input(\"Enter your choice\\t\"))\n",
+    "        structType=int(input(\"Enter input as per the above available options\"))\n",
     "        if structType==1:\n",
     "            print(\"You Selected List Data structure\")\n",
     "            def createList():\n",
@@ -264,13 +251,13 @@
     "                elif choice==11:\n",
     "                    select=\"Copy\"\n",
     "                    print(f\"You have selected {select} operation\")\n",
-    "                elif choice==12:\n",
+    "                elif choice==15:\n",
     "                    select=\"Exit---->>>>\"\n",
     "                    print(f\"You have selected {select} operation\")\n",
     "                else:\n",
     "                    print(\"Invalid input\")\n",
     "                return choice\n",
-    "            print(\"Select your Option to perform Set operation\\n 1.View set\\n 2.Update\\n 3.Add element\\n 4.Subset\\n 5.Remove\\n 6.Discard\\n 7.Pop\\n 8.Length\\n 9.Union\\n 10. Intersection\\n 11.Copy\\n 12.Exit---->>>>\")\n",
+    "            print(\"Select your Option to perform Set operation\\n 1.View set\\n 2.Update\\n 3.Add element\\n 4.Subset\\n 5.Remove\\n 6.Discard\\n 7.Pop\\n 8.Length\\n 9.Union\\n 10. Intersection\\n 11.Copy\\n 15.Exit---->>>>\")\n",
     "            while True:    \n",
     "                choice=int(input(\"choice\"))\n",
     "                setOp(choice)\n",
@@ -494,15 +481,21 @@
     "                    break\n",
     "                else:\n",
     "                    print(\"!Wrong input!\")\n",
-    "        print(\"Do you want to run calculator again Y/N\")\n",
-    "        playAgain=input()\n",
-    "        if playAgain=='n' or playAgain=='N':\n",
-    "            break\n",
-    "    except Exception as error:\n",
-    "        print(\"Exceptions\")\n",
-    "        print(error)\n",
-    "        print(type(error))"
+    "            print(\"Do you want to play again Y/N\")\n",
+    "            playAgain=input()\n",
+    "            if playAgain=='n' or playAgain=='N':\n",
+    "                break\n",
+    "    except:\n",
+    "        print(\"Enter the valid input\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9a0defb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
